--- a/Tienda-v1L/src/main/resources/templates/Producto/fragmentos.html
+++ b/Tienda-v1L/src/main/resources/templates/Producto/fragmentos.html
@@ -10,7 +10,7 @@
         <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">   
+                    <div class="col-md-3" sec:authorize='hasRole("ROLE_ADMIN")'>   
                         <button 
                             type="button" 
                             class="btn btn-primary btn-block" 
@@ -45,8 +45,8 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="categoria">[[#{producto.categoria}]]</label>
-                                    <select class="form-select" aria-label="Default select example"name="IdCategoria" required="true">
-                                        <option th:each="categoria : ${categorias}" th:value="${categoria.idCategoria}">[[$(categoria.descripcion)]]</option>
+                                    <select class="form-select" aria-label="Default select example"name="categoria" required="true">
+                                        <option th:each="categoria : ${categorias}" th:value="${categoria.categoria}">[[$(categoria.descripcion)]]</option>
                                     
                                     </select>
                                 </div>
@@ -102,7 +102,8 @@
                                             <th>[[#{producto.existencias}]]</th>
                                             <th>[[#{producto.activo}]]</th>
                                             <th>[[#{producto.total}]]</th>
-                                            <th></th></tr>
+                                            <th sec:authorize='hasRole("ROLE_ADMIN")'>[[#{producto.pruebas}]]</th>
+                                            </tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="producto, contador : ${productos}">
@@ -113,7 +114,7 @@
                                             <td>[[${producto.existencias}]]</td>
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
                                             <td>[[${producto.precio*producto.existencias}]]</td>
-                                            <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
+                                            <td sec:authorize='hasRole("ROLE_ADMIN")'><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
                                                 <a th:href="@{/producto/modifica/}+${producto.idProducto}"
@@ -161,6 +162,26 @@
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
                                             <div class="card-body">
+                                                <div class="mb-3">
+                                                    <label for="categoria">[[#{producto.categoria}]]</label>
+                                                    <select class="form-select" aria-label="Default select example" th:field="*{categoria}" name="idCategoria" required="true">                                        
+                                                        <option th:each="categoria : ${categorias}" th:value="${categoria.categoria}">[[${categoria.descripcion}]]</option>
+                                                    </select>
+                                                </div>  
+                                                <div class="mb-3">
+                                                    <label for="detalle">[[#{producto.detalle}]]</label>
+                                                    <textarea class="form-control" name="detalle" th:field="*{detalle}"required="true" rows="3"></textarea>                             
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="precio">[[#{producto.precio}]]</label>
+                                                    <input type="number" class="form-control" name="precio" th:field="*{precio}"required="true"/>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label for="existencias">[[#{producto.existencias}]]</label>
+                                                    <input type="number" class="form-control" name="existencias"th:field="*{existencias}" required="true"/>
+                                                </div>
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                                     <input type="text" class="form-control" 
