--- a/Tienda-v1L/src/main/resources/templates/categoria/fragmentos.html
+++ b/Tienda-v1L/src/main/resources/templates/categoria/fragmentos.html
@@ -3,6 +3,8 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
+        <link rel="stylesheet" href="style.css" type="text/css"/>
+
         <title>TechShop</title>
     </head>
     <body>
@@ -10,7 +12,7 @@
         <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">   
+                    <div class="col-md-3" sec:authorize= hasRole("ROLE_VENDEDOR")>  
                         <button 
                             type="button" 
                             class="btn btn-primary btn-block" 
@@ -77,14 +79,15 @@
                                         <tr><th>#</th>
                                             <th>[[#{categoria.descripcion}]]</th>
                                             <th>[[#{categoria.activo}]]</th>
-                                            <th>[[#{categoria.pruebas}]]</th></tr>
+                                            <th sec:authorize='hasRole("ROLE_ADMIN")'>[[#{categoria.pruebas}]]</th></tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="categoria, contador : ${categorias}">
                                             <td>[[${contador.count}]]</td>
                                             <td>[[${categoria.descripcion}]]</td>
+                                            
                                             <td th:text="${categoria.activo} ? 'Activa' : 'Inactiva'" />
-                                            <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                                            <td sec:authorize='hasRole("ROLE_ADMIN")'><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
                                                 <a th:href="@{/categoria/modifica/}+${categoria.idCategoria}"
