--- a/Tienda-v1L/src/main/resources/templates/layout/plantilla.html
+++ b/Tienda-v1L/src/main/resources/templates/layout/plantilla.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:fragment="head">
-        <title>Tienda</title>
+        <title>TechShop</title>
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
@@ -19,15 +20,27 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav" sec:authorize='hasRole("ROLE_vendedor")'>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
+                            <li class="nav-item dropdown" sec:authorize='hasRole("ROLE_ADMIN")'>
+                                <a class="nav-link dropdown-toggle"
+                                   data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.pruebas}]] </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/consultas}">[[#{plantilla.consultas}]]</a></li>    
+                                </ul>
+                                
+                            </li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
                         </ul>
                         <div class="col-md-3">
-                            <ul class="navbar-nav">                                
+                            <ul class="navbar-nav" sec:authorized="!isAutheticated()">                                
                                 <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=es)}">ES</a></li>
                                 <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=en)}">EN</a></li>
+                                <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/login}"><i class="fas fa-sing-in-alt"></i></a></li>
+                                <li class="nav-item text-white my-auto"><i class="fas fa-user"><span sec:authentication="name">Bob</span></i></li>
+                                <li class="nav-item my-auto"><form method="post" th:action="@{/logout}"> <button class="btn btn-dark"><i class="fas fa-sign-out-alt"></i></button></form></li>
                             </ul>
                         </div>
                     </div>
