--- a/Tienda-v1L/src/main/resources/templates/pruebas/listado.html
+++ b/Tienda-v1L/src/main/resources/templates/pruebas/listado.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>tiendaLooneyTunes</title>
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
 
-        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/> 
-        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
+        <section th:replace="~{pruebas/fragmentos :: categoriasTabs}"/>
+       
+        <section th:replace="~{pruebas/fragmentos :: listadoProductos}"/>
 
         <footer th:replace="~{layout/plantilla :: footer}"/>      
       
