--- a/Tienda-v1L/src/main/resources/templates/login.html
+++ b/Tienda-v1L/src/main/resources/templates/login.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>tiendaLooneyTunes</title>        
+        <title>TechShop</title>        
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
+        
         
         <footer th:replace="~{layout/plantilla :: footer}"/>          
     </body>
